# quant-trade

./: a.cpp  arbitrage.py  calendar.py  callback.py  clsForm.py  gui.py  ni08-09-20220704_085111.csv  order_queue.csv  order_status.csv  queueOrder.py  spreadPlot.py  test.cpp  threads.py  toJsson.py  书签  套利.txt  套利列表_2022_07_04..csv  实时回报_2022_07_04-全部..csv  实时回报_2022_07_04..csv  实时资金_2022_07_04.csv  异常.txt  收藏的书签.html  波段交易策略  爬取交易所信息  盘口交易策略.cpp  策略分析
chuanshu/: CMakeLists.txt  CallBacks.py  arbitrage-order.cpp  argout.csv  config.json  cu2201_20210624.csv  cu2202_20210624.csv  data.csv  fee.csv  syList.csv  symbol.csv  tradeFee.py  合约乘数.csv  策略分析.txt
chuanshu/realtrade/: order_queue.csv  order_status.csv  成交查询(1).csv
chuanshu/sklearncode/: mlpr.py  pca.py  tree.py
chuanshu/sklearncode/pytorch/: gym01.py  pytorch-gym.py  循宇.py  网格.py
chuanshu/sklearncode/tensorflow/: DRL.py  first.py  linearregression.py  tensorflow-RL.py  tensorflow-number.py
交易净值/2018.1-2019.10交易成交记录/2018.1.9--3.4模拟盘交易记录/: rb统计模板.xlsx  模拟账号.txt  第一周122下午（初来）.xlsx  第一周123下午（初来）.xlsx  第一周124（初来）.xlsx  第一周125（看盘口下单）.xlsx  第一周126（存在一笔扛单）.xlsx  第三周222白天.xlsx  第三周223.xlsx  第二周129（收盘存在未平单）.xlsx  第二周130(突破单+限制持仓时间).xlsx  第二周131(控制时间).xlsx  第五周305.xlsx  第五周306.xlsx  第四周226.xlsx  第四周227.xlsx  第四周228.xlsx  第四周301.xlsx  第四周302.xlsx
交易净值/2018.1-2019.10交易成交记录/2019.3.1-8.19实盘交易记录/: 我的净值.xlsx  杜帅帅2019上半年交易日志.xlsx
交易净值/2018.1-2019.10交易成交记录/2019.8.19-9.19模拟交易记录/: 杜帅帅2019.8-2020.3模拟交易记录.xlsx
交易净值/2019.4-2021.4交易笔记/: 19.4.10-20.9.15笔记.docx  2020.9.17-2021.4笔记.docx
(+1 files in other folders)
